# ai-daily-digest-agent

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
config/: search_sources.json
docs/: ARCHITECTURE.md  IMPLEMENTATION_NOTES.md  RESUME_PROJECT_DESCRIPTION.md
input/: latest_digest.example.json
scripts/: register_daily_digest_task.ps1  run_digest.ps1
src/ai_news_digest/: __init__.py  __main__.py  api_mode.py  api_server.py  cli.py  config.py  digest_document.py  latex.py  models.py  render_pipeline.py  research_mode.py  selection.py  storage.py  topics.py
templates/: daily_digest.tex
tests/: test_api_mode.py  test_api_server.py  test_cli.py  test_digest_document.py  test_latex.py  test_render_pipeline.py  test_research_mode.py  test_search_registry.py  test_selection.py  test_storage.py
