[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-news-digest"
version = "0.1.0"
description = "Agent-assisted AI intelligence digest pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2.11",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]
api = [
  "openai>=1.108",
]

[project.scripts]
ai-news-digest = "ai_news_digest.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
